--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Matching Game</title>
+	<title>Choose Random Smile</title>
 </head>
 <style>
 	#leftSide{
@@ -108,7 +108,7 @@ function generateFaces(){
 <body onload="generateFaces()" style="background-color: #00BCD4">
 
 <!-- Title of game-->
-<h1>Matching Game</h1>
+<h1>Choose Random Smile</h1>
 
 <!--instruction-->
 <p>Click on the extra smiling face on the left.</p>
